--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           source .env/bin/activate
           pytest app/tests.py
-  deploy-staging:
+  deploy:
     runs-on: ubuntu-latest
     needs: build-and-testing
     steps:
@@ -44,25 +44,13 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
-       
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
 
           script: |
+            mkdir lab9
+            cd lab9
+            git clone https://github.com/kiman0/laba89.git
             git pull origin main
-            source .env/bin/activate
-            pip install -r requirements.txt
-  deploy-prod:
-    runs-on: ubuntu-latest
-    needs: deploy-staging
-    steps:
-      - name: deploy prod
-        uses: appleboy/ssh-action@v0.1.3
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_KEY }}
-
-
-          script: |
-            git pull origin main
+            python3 -m venv .env
             source .env/bin/activate
             pip install -r requirements.txt
