--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,17 +7,17 @@ on:
     branches: [main]
 
 jobs:
-  build-and-testing:
+  bts: 
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python 3.10.2
+      - name: install python
         uses: actions/setup-python@v2
         with:
           python-version: "3.10.2"
 
-      - name: Build
+      - name: bb
         run: |
           python3 -m venv .env
           source .env/bin/activate
@@ -26,19 +26,19 @@ jobs:
           pip install pytest
           pip install pylint
           pip list
-      - name: Use pylint
+      - name: b2
         run: |
           source .env/bin/activate
           find . -maxdepth 2 -type f -name "*.py" | xargs pylint --exit-zero
-      - name: Testing
+      - name: test1
         run: |
           source .env/bin/activate
           pytest app/tests.py
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-testing
+    needs: bts
     steps:
-      - name: deploy staging
+      - name: deploy
         uses: appleboy/ssh-action@v0.1.3
         with:
           host: ${{ secrets.SSH_HOST }}
